syntax = "proto3";

package api;

option go_package = "pkg/grpc;proto";

import "google/protobuf/empty.proto";

message GetImageRequest {
    string id = 1;
}

message GetImageResponse {
    bytes data = 1;
}

message UploadImageRequest {
    string id = 1;
    bytes data = 2;
}

message ErrorResponse {
    string message = 1;
}

service ImageService {
    rpc GetImage(GetImageRequest) returns (GetImageResponse);
    rpc UploadImage(UploadImageRequest) returns (google.protobuf.Empty);
}
